--- a/index.html
+++ b/index.html
@@ -1,42 +1,37 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <link
-  rel="stylesheet"
-  href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css"
-/>
-
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>wixdora.studio</title>
   <link rel="stylesheet" href="style.css" />
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.4/css/all.min.css" />
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.0/css/all.min.css" />
 </head>
-<div class="container">
-    <nav class="sidebar">
-  <h1>wixdora.<span>studio</span></h1>
 <body>
-  
-  <ul>
-    <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
-    <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
-    <li><a href="#portfolio"><i class="fas fa-briefcase"></i> Portfolio</a></li>
-    <li><a href="#services"><i class="fas fa-cogs"></i> Services</a></li>
-    <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
-    <div class="sidebar-logo">
-  <img src="logog.png" alt="Logo" />
-</div>
-  </ul>
-</nav>
+  <div class="container">
+    <nav class="sidebar">
+      <h1>wixdora.<span>studio</span></h1>
+      <ul>
+        <li><a href="#home"><i class="fas fa-home"></i> Home</a></li>
+        <li><a href="#about"><i class="fas fa-user"></i> About</a></li>
+        <li><a href="#skills"><i class="fas fa-laptop-code"></i> Skills</a></li>
+        <li><a href="#portfolio"><i class="fas fa-briefcase"></i> Portfolio</a></li>
+        <li><a href="#services"><i class="fas fa-cogs"></i> Services</a></li>
+        <li><a href="#contact"><i class="fas fa-envelope"></i> Contact</a></li>
+      </ul>
+      <div class="sidebar-logo">
+        <img src="logog.png" alt="Logo" />
+      </div>
+    </nav>
     <main class="content">
+
       <section id="home" class="section">
         <div class="home-text">
-           <p>Hi, Welcome to my webpage.</p>
-          <h2>I'm Masoma Rezaie</h2>
-          <p>Network technician, Gaphic and web designer.</p>
-          <p>I love creating responsive, elegant, and visually appealing designs using HTML and CSS.</p>
-          <a href="cv.pdf (1).docx" download class="btn">Download my Resume</a>
-        </div>
+  <h2 class="main-name">Hi,I'm Masoma Rezaie</h2>
+  <p>Network technician, Graphic and web designer.</p>
+  <a href="cv.pdf (1).docx" download class="btn">Download my Resume</a>
+</div>
         <div class="glow-circle">
           <div class="circle-image">
             <img src="photo_6215020237015861147_x.jpg" alt="Profile Image">
@@ -56,6 +51,56 @@
           grow independently, and someday create designs that speak globally.
         </p>
       </section>
+      
+      <section id="skills" class="section glass-box">
+  <h2 class="section-title">My Skills</h2>
+  <p class="category-description">
+    These are the tools and technologies I'm skilled at using in both design and development.
+  </p>
+  <div class="skills-container">
+    <div class="skill-card">
+      <img src="adobe-photoshop.png" alt="Adobe Photoshop">
+      <span>Photoshop</span>
+    </div>
+    <div class="skill-card">
+      <img src="adobe-illustrator.png" alt="Adobe Illustrator">
+      <span>Illustrator</span>
+    </div>
+    <div class="skill-card">
+      <img src="corel.png" alt="CorelDRAW">
+      <span>CorelDRAW</span>
+    </div>
+    <div class="skill-card">
+      <img src="html.png" alt="HTML">
+      <span>HTML</span>
+    </div>
+    <div class="skill-card">
+      <img src="css.png" alt="CSS">
+      <span>CSS</span>
+    </div>
+    <div class="skill-card">
+      <img src="mysql-database.png" alt="MySQL Server">
+      <span>MySQL</span>
+    </div>
+    <div class="skill-card">
+      <img src="linux.png" alt="Linux Server">
+      <span>Linux</span>
+    </div>
+    <div class="skill-card">
+      <img src="cisco.png" alt="Packet Tracer">
+      <span>Packet Tracer</span>
+    </div>
+    <div class="skill-card">
+      <img src="office.png" alt="ICDL">
+      <span>Office pachage</span>
+    </div>
+    <div class="skill-card">
+      <img src="download (19).jfif" alt="ICDL">
+      <span>Typing</span>
+    </div>
+  </div>
+</section>
+
 
      <section id="portfolio" class="section glass-box">
   <h2 class="section-title">My Portfolio</h2>
@@ -72,7 +117,7 @@
       </div>
 
       <div class="card">
-        <img src="bilbord mokup.png" alt="Billboard Design">
+        <img src="bilbord mokup copy.png" alt="Billboard Design">
         <h3>Billboard Design</h3>
         <p>Promotional billboard for Modern Furniture branding.</p>
       </div>
