--- a/index.html
+++ b/index.html
@@ -172,7 +172,7 @@
   </div>
   <div class="project-card glass">
     <a href="https://masoma-web.github.io/my-movie-theater/" target="_blank" class="project-title">
-      Afghan Cities Culture Site
+     Movie theater
     </a>
     <p class="project-description">
       A creative movie theater website built with HTML & CSS featuring a stylish layout..
